--- a/public/sections/question-1/index.html
+++ b/public/sections/question-1/index.html
@@ -46,24 +46,101 @@
     <div class="main">
       <section class="box-content">
         <div class="box-selection">
-          <div class="box-title">Choisis un avatar</div>
-          <div class="step">1 / 4</div>
-          <div class="avatar-card">
-            <div class="avatar-img">
-              <div class="avatar-1"></div>
-            </div>
+          <div class="box-header">
+            <div class="box-title">Choisis un avatar</div>
+            <div class="step">1 / 4</div>
           </div>
-          <div class="avatar-card">
-            <div class="avatar-img">
-              <div class="avatar-2"></div>
+          <div class="avatar-container">
+            <div class="avatar-card">
+              <div class="avatar-img"><div class="avatar-1"></div></div>
             </div>
-          </div>
-          <div class="avatar-card">
-            <div class="avatar-img">
-              <div class="avatar-3"></div>
+            <div class="avatar-card">
+              <div class="avatar-img"><div class="avatar-2"></div></div>
+            </div>
+            <div class="avatar-card">
+              <div class="avatar-img"><div class="avatar-3"></div></div>
             </div>
           </div>
           <div class="btn-next">Suivant</div>
+        </div>
+      </section>
+      <section class="box-content-2">
+        <div class="box-selection">
+          <div class="box-header">
+            <div class="box-title">Tu cherches à...</div>
+            <div class="step">2 / 4</div>
+          </div>
+          <div class="pill-container">
+            <div class="pill-list">
+              <div class="pill-list-top">
+                <div class="pill pill-orange">rire</div>
+                <div class="pill pill-green">te détendre</div>
+                <div class="pill pill-purple">réfléchir</div>
+              </div>
+              <div class="pill-list-bot">
+                <div class="pill pill-lavender">frissoner</div>
+                <div class="pill pill-yellow">être émue.e</div>
+              </div>
+            </div>
+          </div>
+          <div class="btn-next">Suivant</div>
+        </div>
+      </section>
+      <section class="box-content-3">
+        <div class="box-selection">
+          <div class="box-header">
+            <div class="box-title">Tu préfères voir quelque chose de...</div>
+            <div class="step">3 / 4</div>
+          </div>
+          <div class="style-container">
+            <div class="style-card">
+              <div class="style-img"><div class="avatar-4"></div></div>
+              <div class="style-txt">simple à suivre</div>
+            </div>
+            <div class="style-card">
+              <div class="avatar-img"><div class="avatar-5"></div></div>
+              <div class="style-txt">complexe</div>
+            </div>
+            <div class="style-card">
+              <div class="style-img"><div class="avatar-6"></div></div>
+              <div class="style-txt">peu importe</div>
+            </div>
+          </div>
+          <div class="btn-next">Suivant</div>
+        </div>
+      </section>
+    </section>
+      <section class="box-content-4">
+        <div class="box-selection">
+          <div class="box-header">
+            <div class="box-title">Une dernière question. Plutôt...</div>
+            <div class="step">4 / 4</div>
+          </div>
+          <div class="style-container">
+            <div class="style-card">
+              <div class="style-img"><div class="avatar-7"></div></div>
+              <div class="style-txt">film</div>
+            </div>
+            <div class="style-card">
+              <div class="avatar-img"><div class="avatar-8"></div></div>
+              <div class="style-txt">série</div>
+            </div>
+            <div class="style-card">
+              <div class="style-img"><div class="avatar-9"></div></div>
+              <div class="style-txt">film & série</div>
+            </div>
+          </div>
+          <div class="btn-next">Suivant</div>
+        </div>
+      </section>
+      <section class="box-content-5"> 
+        <div class="box-selection">
+          <div class="box-header">
+            <div class="box-title">Donne-nous une seconde pour te trouver un film qui pourrait t’intéresser.</div>
+          </div>
+          <div class="loading-container">
+            <div class="loading-img"></div>
+          </div>
         </div>
       </section>
     </div>
