Ajout des sections avec js pour afficher/masquer

--- a/public/sections/question-1/index.html
+++ b/public/sections/question-1/index.html
@@ -6,6 +6,8 @@
     <title>Question 1</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/uoj7lnu.css" />
+    <!-- Typography from Adobe Font -->
+     <!-- Come check my photography portfolio https://weslait.myportfolio.com/ -->
     <script>
       (function (d) {
         var config = {
@@ -144,6 +146,7 @@
         </div>
       </section>
     </div>
+    <script src="script.js"></script>
     <footer>
       <div class="footer-content">
         <div class="social-media">
