Ajout d'un champ date pour compléter l'âge

--- a/public/new-account/index.html
+++ b/public/new-account/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class="title-field">
               <div class="label-field">Quel âge as-tu ?</div>
-              <input class="box-field" type="text" />
+              <input class="box-field" type="date" />
             </div>
           </div>
           <div class="text-button">
