creation de la popup login sans js

--- a/public/new-account/index.html
+++ b/public/new-account/index.html
@@ -71,6 +71,19 @@
         </div>
       </section>
     </div>
+
+    <div class="popup-login">
+      <div class="btn-close"></div>
+      <div class="logo-popup">Mellow</div>
+      <div class="group-field">
+        <div class="label-field-username">Nom d'utilisateur</div>
+        <input class="field username" type="text" />
+        <div class="label-field-password">Mot de passe</div>
+        <input class="field username" type="password" />
+        <div class="btn-connect">Se connecter</div>
+      </div>
+    </div>
+
     <footer>
       <div class="footer-content">
         <div class="social-media">
