Listener sur les div pour récupérer les choix des utilisateurs

--- a/public/sections/question-1/index.html
+++ b/public/sections/question-1/index.html
@@ -53,13 +53,13 @@
             <div class="step">1 / 4</div>
           </div>
           <div class="avatar-container">
-            <div class="avatar-card">
+            <div class="avatar-card" id="choice-1">
               <div class="avatar-img"><div class="avatar-1"></div></div>
             </div>
-            <div class="avatar-card">
+            <div class="avatar-card" id="choice-2">
               <div class="avatar-img"><div class="avatar-2"></div></div>
             </div>
-            <div class="avatar-card">
+            <div class="avatar-card" id="choice-3">
               <div class="avatar-img"><div class="avatar-3"></div></div>
             </div>
           </div>
@@ -75,13 +75,13 @@
           <div class="pill-container">
             <div class="pill-list">
               <div class="pill-list-top">
-                <div class="pill pill-orange">rire</div>
-                <div class="pill pill-green">te détendre</div>
-                <div class="pill pill-purple">réfléchir</div>
+                <div class="pill pill-orange" id="pill-choice-1">rire</div>
+                <div class="pill pill-green" id="pill-choice-2">te détendre</div>
+                <div class="pill pill-purple" id="pill-choice-3">réfléchir</div>
               </div>
               <div class="pill-list-bot">
-                <div class="pill pill-lavender">frissoner</div>
-                <div class="pill pill-yellow">être émue.e</div>
+                <div class="pill pill-lavender" id="pill-choice-4">frissoner</div>
+                <div class="pill pill-yellow" id="pill-choice-5">être émue.e</div>
               </div>
             </div>
           </div>
@@ -95,15 +95,15 @@
             <div class="step">3 / 4</div>
           </div>
           <div class="style-container">
-            <div class="style-card">
+            <div class="style-card" id="card-choice-1">
               <div class="style-img"><div class="avatar-4"></div></div>
               <div class="style-txt">simple à suivre</div>
             </div>
-            <div class="style-card">
+            <div class="style-card" id="card-choice-2">
               <div class="avatar-img"><div class="avatar-5"></div></div>
               <div class="style-txt">complexe</div>
             </div>
-            <div class="style-card">
+            <div class="style-card" id="card-choice-3">
               <div class="style-img"><div class="avatar-6"></div></div>
               <div class="style-txt">peu importe</div>
             </div>
@@ -119,15 +119,15 @@
             <div class="step">4 / 4</div>
           </div>
           <div class="style-container">
-            <div class="style-card">
+            <div class="style-card" id="format-choice-1">
               <div class="style-img"><div class="avatar-7"></div></div>
               <div class="style-txt">film</div>
             </div>
-            <div class="style-card">
+            <div class="style-card" id="format-choice-2">
               <div class="avatar-img"><div class="avatar-8"></div></div>
               <div class="style-txt">série</div>
             </div>
-            <div class="style-card">
+            <div class="style-card" id="format-choice-3">
               <div class="style-img"><div class="avatar-9"></div></div>
               <div class="style-txt">film & série</div>
             </div>
