Changement création du compte

--- a/public/new-account/index.html
+++ b/public/new-account/index.html
@@ -47,9 +47,7 @@
       <section class="box-content">
         <div class="illustration"></div>
         <div class="right-content">
-          <div class="headline">
-            Crée un compte pour retrouver le contenu qui t’a été suggéré.
-          </div>
+          <h1 class="headline">Rejoins la famille !</h1>
           <div class="group-title-field">
             <div class="title-field">
               <div class="label-field">Choisi un nom d’utilisateur</div>
