Ajout de la section recommandations

--- a/public/new-account/index.html
+++ b/public/new-account/index.html
@@ -51,15 +51,15 @@
           <div class="group-title-field">
             <div class="title-field">
               <div class="label-field">Choisi un nom d’utilisateur</div>
-              <input class="box-field" type="text" />
+              <input class="box-field" id="username" type="text" />
             </div>
             <div class="title-field">
               <div class="label-field">Saisi un mot de passe</div>
-              <input class="box-field" type="password" />
+              <input class="box-field" id="password" type="password" />
             </div>
             <div class="title-field">
               <div class="label-field">Quel âge as-tu ?</div>
-              <input class="box-field" type="date" />
+              <input class="box-field" id="date" type="date" />
             </div>
           </div>
           <div class="text-button">
@@ -76,13 +76,15 @@
         <div class="group-field">
           <div class="label-field-username">Nom d'utilisateur</div>
           <input
-            class="field username"
+            class="field"
+            id="username"
             type="text"
             placeholder="Nom d'utilisateur"
           />
           <div class="label-field-password">Mot de passe</div>
           <input
-            class="field username"
+            class="field"
+            id="username"
             type="password"
             placeholder="Mot de passe"
           />
