--- a/public/landing/index.html
+++ b/public/landing/index.html
@@ -84,6 +84,27 @@
         </div>
       </section>
     </div>
+    <div id="popup-overlay" class="popup-overlay-bg">
+      <div class="popup-login">
+        <div class="btn-close"></div>
+        <div class="logo-popup">Mellow</div>
+        <div class="group-field">
+          <div class="label-field-username">Nom d'utilisateur</div>
+          <input
+            class="field username"
+            type="text"
+            placeholder="Nom d'utilisateur"
+          />
+          <div class="label-field-password">Mot de passe</div>
+          <input
+            class="field username"
+            type="password"
+            placeholder="Mot de passe"
+          />
+          <div class="btn-connect">Se connecter</div>
+        </div>
+      </div>
+    </div>
     <footer>
       <div class="footer-content">
         <div class="social-media">
@@ -99,5 +120,6 @@
         <div class="copyrights">© 2025 Mellow</div>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
