--- a/public/sections/question-1/index.html
+++ b/public/sections/question-1/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Question 1</title>
+    <title>Question</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/uoj7lnu.css" />
     <!-- Typography from Adobe Font -->
-     <!-- Come check my photography portfolio https://weslait.myportfolio.com/ -->
+    <!-- Come check my photography portfolio https://weslait.myportfolio.com/ -->
     <script>
       (function (d) {
         var config = {
@@ -46,7 +46,7 @@
       <div class="button btn-login">Se connecter</div>
     </header>
     <div class="main">
-      <section class="box-content">
+      <section class="box-content fade-in">
         <div class="box-selection">
           <div class="box-header">
             <div class="box-title">Choisis un avatar</div>
@@ -66,7 +66,7 @@
           <div class="btn-next">Suivant</div>
         </div>
       </section>
-      <section class="box-content-2">
+      <section class="box-content-2 fade-in">
         <div class="box-selection">
           <div class="box-header">
             <div class="box-title">Tu cherches à...</div>
@@ -76,19 +76,25 @@
             <div class="pill-list">
               <div class="pill-list-top">
                 <div class="pill pill-orange" id="pill-choice-1">rire</div>
-                <div class="pill pill-green" id="pill-choice-2">te détendre</div>
+                <div class="pill pill-green" id="pill-choice-2">
+                  te détendre
+                </div>
                 <div class="pill pill-purple" id="pill-choice-3">réfléchir</div>
               </div>
               <div class="pill-list-bot">
-                <div class="pill pill-lavender" id="pill-choice-4">frissoner</div>
-                <div class="pill pill-yellow" id="pill-choice-5">être émue.e</div>
+                <div class="pill pill-lavender" id="pill-choice-4">
+                  frissoner
+                </div>
+                <div class="pill pill-yellow" id="pill-choice-5">
+                  être émue.e
+                </div>
               </div>
             </div>
           </div>
           <div class="btn-next">Suivant</div>
         </div>
       </section>
-      <section class="box-content-3">
+      <section class="box-content-3 fade-in">
         <div class="box-selection">
           <div class="box-header">
             <div class="box-title">Tu préfères voir quelque chose de...</div>
@@ -111,8 +117,7 @@
           <div class="btn-next">Suivant</div>
         </div>
       </section>
-    </section>
-      <section class="box-content-4">
+      <section class="box-content-4 fade-in">
         <div class="box-selection">
           <div class="box-header">
             <div class="box-title">Une dernière question. Plutôt...</div>
@@ -135,13 +140,76 @@
           <div class="btn-next">Suivant</div>
         </div>
       </section>
-      <section class="box-content-5"> 
+      <section class="box-content-5 fade-in">
         <div class="box-selection">
           <div class="box-header">
-            <div class="box-title">Donne-nous une seconde pour te trouver un film qui pourrait t’intéresser.</div>
+            <div class="box-title">
+              Donne-nous une seconde pour te trouver un film qui pourrait
+              t’intéresser.
+            </div>
           </div>
           <div class="loading-container">
             <div class="loading-img"></div>
+          </div>
+        </div>
+      </section>
+      <section class="box-content-6 fade-in">
+        <div class="box-selection">
+          <div class="box-header">
+            <div class="box-title">Voici ta sélection personnalisée</div>
+          </div>
+          <div class="movie-cards" id="movie-recommended-1">
+            <div class="movie-card">
+              <div class="icon-save"></div>
+              <div class="movie-poster"></div>
+              <div class="movie-description">
+                <div class="card-content">
+                  <div class="top-card">
+                    <div id="genre">[genre]</div>
+                    <div id="year">[year]</div>
+                  </div>
+                  <div class="movie-title-box" id="movie-title">[title]</div>
+                  <div class="bot-card">
+                    <div id="duration">[duration]</div>
+                    <div id="platform"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="movie-card" id="movie-recommended-2">
+              <div class="icon-save"></div>
+              <div class="movie-poster"></div>
+              <div class="movie-description">
+                <div class="card-content">
+                  <div class="top-card">
+                    <div id="genre">[genre]</div>
+                    <div id="year">[year]</div>
+                  </div>
+                  <div class="movie-title-box" id="movie-title">[title]</div>
+                  <div class="bot-card">
+                    <div id="duration">[duration]</div>
+                    <div id="platform"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="movie-card" id="movie-recommended-3">
+              <div class="icon-save"></div>
+              <div class="movie-poster"></div>
+              <div class="movie-description">
+                <div class="card-content">
+                  <div class="top-card">
+                    <div id="genre">[genre]</div>
+                    <div id="year">[year]</div>
+                  </div>
+                  <div class="movie-title-box" id="movie-title">[title]</div>
+                  <div class="bot-card">
+                    <div id="duration">[duration]</div>
+                    <div id="platform"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
