Création d'un dashboard

--- a/public/sections/question-1/index.html
+++ b/public/sections/question-1/index.html
@@ -42,7 +42,9 @@
   </head>
   <body>
     <header class="header">
-      <div class="logo">Mellow</div>
+      <a class="link-decoration" href="../../landing/index.html"
+        ><div class="logo">Mellow</div></a
+      >
       <div class="button btn-login">Se connecter</div>
     </header>
     <div class="main">
@@ -210,6 +212,10 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="cta-sentence">
+            <a href="../../new-account/index.html">Connecte-toi</a> pour accéder
+            au contenu que tu as enregistré.
           </div>
         </div>
       </section>
