--- a/public/new-account/index.html
+++ b/public/new-account/index.html
@@ -40,7 +40,9 @@
   </head>
   <body>
     <header class="header">
-      <div class="logo">Mellow</div>
+      <a class="link-decoration" href="../../landing/index.html"
+        ><div class="logo">Mellow</div></a
+      >
       <div class="button btn-login">Se connecter</div>
     </header>
     <div class="main">
