--- a/public/logged/index.html
+++ b/public/logged/index.html
@@ -147,40 +147,8 @@
                   </div>
                 </div>
               </div>
-              <div class="movie-card-saved" id="movie-saved-2">
-                <div class="icon-save"></div>
-                <div class="movie-poster"></div>
-                <div class="movie-description">
-                  <div class="card-content">
-                    <div class="top-card">
-                      <div id="genre">[genre]</div>
-                      <div id="year">[year]</div>
-                    </div>
-                    <div class="movie-title-box" id="movie-title">[title]</div>
-                    <div class="bot-card">
-                      <div id="duration">[duration]</div>
-                      <div id="platform"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="movie-card-saved" id="movie-saved-3">
-                <div class="icon-save"></div>
-                <div class="movie-poster"></div>
-                <div class="movie-description">
-                  <div class="card-content">
-                    <div class="top-card">
-                      <div id="genre">[genre]</div>
-                      <div id="year">[year]</div>
-                    </div>
-                    <div class="movie-title-box" id="movie-title">[title]</div>
-                    <div class="bot-card">
-                      <div id="duration">[duration]</div>
-                      <div id="platform"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <div class="movie-card-saved" id="movie-saved-2"></div>
+              <div class="movie-card-saved" id="movie-saved-3"></div>
             </div>
           </div>
         </section>
