--- a/public/new-account/index.html
+++ b/public/new-account/index.html
@@ -66,7 +66,9 @@
           </div>
           <div class="text-button">
             <div class="left-label">C’est tout pour nous !</div>
-            <div class="btn-create">Créer un compte</div>
+            <a href="../logged/index.html">
+              <div class="btn-create">Créer un compte</div>
+            </a>
           </div>
         </div>
       </section>
@@ -86,7 +88,7 @@
           <div class="label-field-password">Mot de passe</div>
           <input
             class="field"
-            id="username"
+            id="password"
             type="password"
             placeholder="Mot de passe"
           />
