en cours de configurer l'auth

--- a/public/new-account/index.html
+++ b/public/new-account/index.html
@@ -84,7 +84,7 @@
           <div class="label-field-password">Mot de passe</div>
           <input
             class="field"
-            id="username"
+            id="password"
             type="password"
             placeholder="Mot de passe"
           />
