--- a/public/new-account/index.html
+++ b/public/new-account/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="title-field">
               <div class="label-field">Quel âge as-tu ?</div>
-              <input class="box-field" id="date" type="date" />
+              <input class="box-field" id="age" type="date" />
             </div>
           </div>
           <div class="text-button">
