section questionnaire fonctionnel

--- a/public/landing/index.html
+++ b/public/landing/index.html
@@ -56,7 +56,9 @@
               </div>
             </div>
           </div>
-          <div class="button btn-cta">Trouver quoi regarder</div>
+          <a href="../sections/questionnaire/index.html"
+            ><div class="button btn-cta">Trouver quoi regarder</div></a
+          >
         </div>
         <div class="infinite-band-wrapper">
           <div class="infinite-band">
