--- a/public/logged/index.html
+++ b/public/logged/index.html
@@ -53,8 +53,8 @@
               <div class="box-header">
                 <div class="box-title">Tes recommandations du jour</div>
               </div>
-              <div class="movie-cards" id="movie-recommended-1">
-                <div class="movie-card">
+              <div class="movie-cards">
+                <div class="movie-card" id="movie-recommended-1">
                   <div class="icon-save"></div>
                   <div class="movie-poster"></div>
                   <div class="movie-description">
@@ -67,7 +67,7 @@
                         [title]
                       </div>
                       <div class="bot-card">
-                        <div id="duration">[duration]</div>
+                        <div id="format">[format]</div>
                         <div id="platform"></div>
                       </div>
                     </div>
@@ -86,7 +86,7 @@
                         [title]
                       </div>
                       <div class="bot-card">
-                        <div id="duration">[duration]</div>
+                        <div id="format">[format]</div>
                         <div id="platform"></div>
                       </div>
                     </div>
@@ -105,7 +105,7 @@
                         [title]
                       </div>
                       <div class="bot-card">
-                        <div id="duration">[duration]</div>
+                        <div id="format">[format]</div>
                         <div id="platform"></div>
                       </div>
                     </div>
@@ -141,14 +141,18 @@
                     </div>
                     <div class="movie-title-box" id="movie-title">[title]</div>
                     <div class="bot-card">
-                      <div id="duration">[duration]</div>
+                      <div id="format">[format]</div>
                       <div id="platform"></div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="movie-card-saved" id="movie-saved-2"></div>
-              <div class="movie-card-saved" id="movie-saved-3"></div>
+              <div class="empty-choice" id="movie-saved-2">
+                <div class="empty-card">2</div>
+              </div>
+              <div class="empty-choice" id="movie-saved-3">
+                <div class="empty-card">3</div>
+              </div>
             </div>
           </div>
         </section>
