Ajout des data de l'API

--- a/public/logged/index.html
+++ b/public/logged/index.html
@@ -63,7 +63,7 @@
                         <div id="genre">[genre]</div>
                         <div id="year">[year]</div>
                       </div>
-                      <div class="movie-title-box" id="movie-title">
+                      <div class="movie-title-box" id="movie-title-1">
                         [title]
                       </div>
                       <div class="bot-card">
@@ -82,7 +82,7 @@
                         <div id="genre">[genre]</div>
                         <div id="year">[year]</div>
                       </div>
-                      <div class="movie-title-box" id="movie-title">
+                      <div class="movie-title-box" id="movie-title-2">
                         [title]
                       </div>
                       <div class="bot-card">
@@ -101,7 +101,7 @@
                         <div id="genre">[genre]</div>
                         <div id="year">[year]</div>
                       </div>
-                      <div class="movie-title-box" id="movie-title">
+                      <div class="movie-title-box" id="movie-title-3">
                         [title]
                       </div>
                       <div class="bot-card">
@@ -139,7 +139,9 @@
                       <div id="genre">[genre]</div>
                       <div id="year">[year]</div>
                     </div>
-                    <div class="movie-title-box" id="movie-title">[title]</div>
+                    <div class="movie-title-box" id="movie-title-4">
+                      [title]
+                    </div>
                     <div class="bot-card">
                       <div id="format">[format]</div>
                       <div id="platform"></div>
